ObjectSerialization
===========================================

Version 1.0.19
-------------------------------------------
+ modified class serializer to serialize fields (public/protected/private) instead of public properties and public fields

Version 1.0.18
-------------------------------------------
+ added support to omit class/struct field serialization if it is marked with NonSerialized attribute
+ disallowed class/struct serialization if contains readonly fields not marked with NonSerialized attribute (an SerializationException suggesting addition of NonSerialized attribute removal of readonly modifier is thrown)
+ modified Class/Struct/TypeSerializerBuilder to generate serialization code on first SerializeFn/DeserializeFn property acces instead of on type loading to avoid TypeInitializationExceptions.
+ modified readonly field serialization exception to be more specified about type.

Version 1.0.17
-------------------------------------------
+ modified class serializer to serialize public properties and fields that are not static and not readonly
+ modified struct serializer to omit readonly fields (Expression.Assign() method does not allow to overwrite readonly fields)

Version 1.0.16
-------------------------------------------
+ introduced TypeInfoRepository class with ability to register type (to decrease size of serialized data)

Version 1.0.15
-------------------------------------------
+ extended IObjectSerializer interface to support streams
+ added performance test for huge object
+ refactored adapter classes in performance tests
+ added tests for empty struct / class serialization

Version 1.0.14
-------------------------------------------
+ simplified IObjectSerializer interface

Version 1.0.13
-------------------------------------------
+ added ProtoBuf-net serializer for performance comparison
+ annotated TestObjects with ProtoBuf attributes
+ refactored PerformanceMonitor and added HtmlResultPresenter